rename API resync to re_index
